./pages/index.html

--- a/index.html
+++ b/index.html
@@ -844,8 +844,8 @@
             <p>Experience the power of next-generation artificial intelligence that adapts, learns, and evolves with
                 your needs. Transform your workflow with our cutting-edge AI solutions.</p>
             <div class="hero-buttons">
-                <a href="assiss.html"><button class="cta-button">Start Free Trial</button></a>
-                <a href="main.html"><button class="secondary-button">Watch Demo</button></a>
+                <a href="./pages/assiss.html"><button class="cta-button">Start Free Trial</button></a>
+                <a href="./pages/main.html"><button class="secondary-button">Watch Demo</button></a>
             </div>
         </div>
     </section>
