--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                         <li><a href="#pricing">Pricing</a></li>
                     </ul>
                 </nav>
-                <a href="https://www.elementsofai.com/"> <button class="cta-button">Get Started</button></a>
+                <a href="https://khanriyazi.github.io/Workshop/"> <button class="cta-button">Get Started</button></a>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -844,7 +844,8 @@
             <p>Experience the power of next-generation artificial intelligence that adapts, learns, and evolves with
                 your needs. Transform your workflow with our cutting-edge AI solutions.</p>
             <div class="hero-buttons">
-                <a href="./pages/assiss.html"><button class="cta-button">Start Free Trial</button></a>
+                <a href="https://khanriyazi.github.io/My-To-do/"><button class="cta-button">Start Free
+                        Trial</button></a>
                 <a href="./pages/main.html"><button class="secondary-button">Watch Demo</button></a>
             </div>
         </div>
