--- a/index.html
+++ b/index.html
@@ -846,7 +846,7 @@
             <div class="hero-buttons">
                 <a href="https://khanriyazi.github.io/My-To-do/"><button class="cta-button">Start Free
                         Trial</button></a>
-                <a href="./pages/main.html"><button class="secondary-button">Watch Demo</button></a>
+                <a href="./pages/main.html"><button class="secondary-button">Enroll with AI </button></a>
             </div>
         </div>
     </section>
