--- a/index.html
+++ b/index.html
@@ -817,7 +817,7 @@
                         <li><a href="#pricing">Pricing</a></li>
                     </ul>
                 </nav>
-                <a href="https://khanriyazi.github.io/Workshop/"> <button class="cta-button">Get Started</button></a>
+                <a href="https://khanriyazi.github.io/Workshop/"> <button class="cta-button">Workshop</button></a>
                 <button class="mobile-menu-btn" id="mobileMenuBtn">
                     <i class="fas fa-bars"></i>
                 </button>
@@ -847,6 +847,7 @@
                 <a href="https://khanriyazi.github.io/My-To-do/"><button class="cta-button">Start Free
                         Trial</button></a>
                 <a href="./pages/main.html"><button class="secondary-button">Enroll with AI </button></a>
+                <a href="./pages/blog.html"><button class="cta-button">Blog on AI</button></a>
             </div>
         </div>
     </section>
