--- a/index.html
+++ b/index.html
@@ -848,6 +848,8 @@
                         Trial</button></a>
                 <a href="./pages/main.html"><button class="secondary-button">Enroll with AI </button></a>
                 <a href="./pages/blog.html"><button class="cta-button">Blog on AI</button></a>
+                <a href="https://khanriyazi.github.io/Link_Dashbord/"><button class="secondary-button">Add links
+                    </button></a>
             </div>
         </div>
     </section>
